[package]
name = "antiraid-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2", features = ["serde"] }
strum = { version = "0.26", features = ["derive"] }

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]
